# fast-subs

./: .pre-commit-config.yaml  README.md  cli.py  docker-compose.yaml  manage.py  pyproject.toml  repository-tree.json
server/: main.py
server/apps/demo/server/: main.py
server/apps/demo/server/config/: factory.py
server/apps/demo/server/services/: validators.py
server/apps/gateway/server/: main.py
server/apps/gateway/server/config/environments/: production.py  staging.py
server/apps/gateway/server/docs/: README.md
server/apps/template/server/config/environments/: base.py  development.py
server/apps/template/server/docs/: manager.py
