[tool.poetry]
name = "fast-subs"
version = "0.1.0"
description = "A demonstration of a fastapi server that mounts multiple fastapi independent sub-applications"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License Version 2.0"
readme = "README.md"
packages = [{include = "fast_subs"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
coverage = "^7.2.3"
ruff = "^0.0.261"
python-decouple = "^3.8"
fastapi = {extras = ["all"], version = "^0.95.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
typer = "^0.7.0"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 140
skip_gitignore = true

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "dist"]
target-version = "py39"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
